--- a/web porto.html
+++ b/web porto.html
@@ -139,7 +139,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <form>
+            <form action="send_email.php" method="POST">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name"/>
